--- a/week2/styles/chineseFood.css
+++ b/week2/styles/chineseFood.css
@@ -5,6 +5,7 @@ should appear only if the width of the browser is equal to or less than 767px.
 */
 *{
 	box-sizing: border-box;
+	margin: 0px;
 }
 
 h1 {
@@ -12,6 +13,7 @@ h1 {
 	font-style: strong;
 	text-align: center;
 	text-shadow: 0.1em 0.1em gray;
+	border: ;
 }
 h2 {
 	font-family: arial, Franklin, Helvetica, sans-serif;
@@ -19,30 +21,31 @@ h2 {
 	top: 0;
 	right: 0;
 	float: right;
-	background-color: black;
+	background-color: grey;
 	color: #ffff00;
 	text-align: right;
+	border: 1px solid black;
 }
 p { 
 	font-style: italic;
 	font-size: 1em;
 	text-align: left;
 	padding: 2em;
+	color: black;
 }
 section {
 	width: 30%;
 	min-height: 60%;
-	border: 2px dashed yellow;
-	color: white;
+	border: 1px solid black;
 	font-family: courier;
 	float: left;
 	margin: 0.3em;
 }
 
 
-html section:nth-child(2) {background-color: #402;}
-html section:nth-child(3) {background-color: #333;}
-html section:nth-child(4) {background-color: #121;}
+html section:nth-child(2) {background-color: #bfd;}
+html section:nth-child(3) {background-color: #ccc;}
+html section:nth-child(4) {background-color: #ede;}
 
 
 /*	Definitions:			*/
@@ -55,7 +58,7 @@ html section:nth-child(4) {background-color: #121;}
 {  
 	.col-large-4
 	{
-		width: 33%;
+		width: 30%;
 	}
 }
 
@@ -64,7 +67,7 @@ html section:nth-child(4) {background-color: #121;}
 {  
 	.col-tablet-6
 	{
-		width: 50%;
+		width: 47%;
 	}
 	.col-tablet-12
 	{
