--- a/week3/module3_solution/css/oolong.css
+++ b/week3/module3_solution/css/oolong.css
@@ -1,37 +1,49 @@
+
+.one.two {
+	background-color: yellow;
+	text-align: center;
+}  /* WORKED ! */
+
 body {
 	font-family: Helvetica, sans-serif;
 	color: white;
 	background-color: #400;
 }
 #business_name{
-	width: 50%;
-	background-color: grey;
+	background-color: #999999;
 	font-family: 'Zilla Slab', serif;
+	color: black;
 }
+
 
 /*OVERRIDING SOME BOOTSTRAP STYLES HERE*/
 /*It is such a relief to realize I can merely repeat the name of 
 the item I wish to un-default */
-.navbar  {
+a.navbar  {
 	border-radius: 0px;
 	background-color: blue;
+	color: white;
 }
 .navbar-default {
 	border-radius: 0px;
-	background-color: yellow;
-	width: 90%;
+	background-color: navy;
 	border: 0px; /* Yay!  That border finally disappeared.*/
+.navbar-brand {
+	color: white;
 }
-header {
+}
+/*header {
 	background-color: blue; 
 }
-/****************************************/
 nav #over {
 	border-radius: 10px;
 	background-color: gold;
-	/* this didn't work.  it's ignored or overridden*/
 }
 
 #centered {
 	text-align: center;
+}
+*/
+.reviled {
+	background-color: #004444;
 }
